Split and update a notebook.

--- a/maths_montecarlo_compute_integral_en.ipynb
+++ b/maths_montecarlo_compute_integral_en.ipynb
@@ -21,7 +21,7 @@
    },
    "source": [
     "**TODO**\n",
-    "- traduire en français certaines phrases restées en anglais"
+    "- traduire en anglais ce qu'il reste à traduire..."
    ]
   },
   {
@@ -35,18 +35,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\newcommand{\\ounk}{{\\color{red}{O_1}}}$\n",
-    "$\\newcommand{\\aunk}{{\\color{red}{\\mathcal{A}_1}}}$\n",
-    "$\\newcommand{\\nunk}{{\\color{red}{\\mathcal{N}_1}}}$\n",
-    "$\\newcommand{\\okn}{{\\color{blue}{O_2}}}$\n",
-    "$\\newcommand{\\akn}{{\\color{blue}{\\mathcal{A}_2}}}$\n",
-    "$\\newcommand{\\nkn}{{\\color{blue}{\\mathcal{N}_2}}}$\n",
-    "Conceptuellement, pour calculer la surface $\\aunk$ d'un objet $\\ounk$ avec la methode Monte-Carlo, il suffit:\n",
-    "1. de placer cet objet $\\ounk$ entièrement dans une figure géométrique $\\okn$ dont on connait la surface $\\mathcal \\akn$ (par exemple un carré ou un rectangle)\n",
-    "2. tirer aléatoirement un grand nombre de points dans cette figure  $\\okn$ (tirage uniforme)\n",
-    "3. compter le nombre de points $\\nunk$ tombés dans l'objet  $\\ounk$ dont on veut calculer la surface\n",
-    "4. calculer le rapport $\\frac{\\nunk}{\\nkn}$ où $\\nkn$ est le nombre total de points tiré aléatoirement (en multipliant par 100 ce rapport on obtient le pourcentage de points tombés dans l'objet $\\ounk$)\n",
-    "5. appliquer ce rapport à la surface $\\mathcal \\akn$ de la figure englobante $\\okn$ (le carré, rectangle, ... dont on connait la surface) pour obtenir la surface $\\aunk$ recherchée: $\\aunk \\simeq \\frac{\\nunk}{\\nkn} \\mathcal \\akn$"
+    "Conceptuellement, pour calculer la surface $\\mathcal A_1$ d'un objet $O_1$ avec la methode Monte-Carlo, il suffit:\n",
+    "\n",
+    "1. de placer cet objet $O_1$ entièrement dans une figure géométrique $O_2$ dont on connait la surface $\\mathcal A_2$ (par exemple un carré ou un rectangle)\n",
+    "2. tirer aléatoirement un grand nombre de points dans cette figure  $O_2$ (tirage uniforme)\n",
+    "3. compter le nombre de points $N_1$ tombés dans l'objet  $O_1$ dont on veut calculer la surface\n",
+    "4. calculer le rapport $\\frac{N_1}{N}$ où $N$ est le nombre total de points tiré aléatoirement (en multipliant par 100 ce rapport on obtient le pourcentage de points tombés dans l'objet $O_1$)\n",
+    "5. appliquer ce rapport à la surface $\\mathcal A_2$ de figure englobante $O_2$ (le carré, rectangle, ... dont on connait la surface) pour obtenir la surface $\\mathcal A_1$ recherchée: $\\mathcal A_1 \\simeq \\frac{N_1}{N} \\mathcal A_2$"
    ]
   },
   {
@@ -70,7 +65,7 @@
     "N = 100\n",
     "rand = np.array([np.random.uniform(low=-3, high=3, size=N), np.random.uniform(low=-3, high=3, size=N)]).T\n",
     "\n",
-    "fig, ax = plt.subplots(1, 1, figsize=(7, 7))\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
     "ax.plot(rand[:,0], rand[:,1], '.k')\n",
     "ax.plot(x, y, \"-r\", linewidth=2)\n",
     "ax.plot([-3, -3, 3, 3, -3], [-3, 3, 3, -3, -3], \"-b\", linewidth=2)\n",
@@ -297,8 +292,6 @@
    },
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 1, figsize=(12, 8))\n",
-    "\n",
     "x_array = np.arange(x_lower_bound, x_upper_bound, 0.01)\n",
     "y_array = f(x_array)\n",
     "\n",
@@ -324,7 +317,7 @@
    "metadata": {},
    "source": [
     "Dans le document suivant, nous allons appliquer le même principe pour calculer la constante $\\pi$ : \n",
-    "http://www.jdhp.org/docs/notebook/maths_montecarlo_compute_pi_fr.html."
+    "http://www.jdhp.org/docs/notebook/maths_montecarlo_compute_pi_en.html."
    ]
   }
  ],
