--- a/python_pandas_en.ipynb
+++ b/python_pandas_en.ipynb
@@ -2,7 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "meta",
+     "toc_en"
+    ]
+   },
    "source": [
     "# Pandas"
    ]
@@ -1945,6 +1950,7 @@
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
