--- a/python_numpy_en.ipynb
+++ b/python_numpy_en.ipynb
@@ -194,29 +194,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Linspace and meshgrid"
+    "### Linspace"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "np.linspace(0., 2., 11)"
+    "np.linspace(0., 2., 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Meshgrid"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "np.meshgrid([1, 2, 3], [4, 5, 6])"
+    "xx, yy = np.meshgrid([1, 2, 3], [4, 5, 6])\n",
+    "\n",
+    "print(xx)\n",
+    "print()\n",
+    "print(yy)"
    ]
   },
   {
